# win32-notify

./: README.md  Win32-notify.cabal  appveyor.yml  stack.yaml
dummy-src/: Dummy.hs
src/System/Win32/: FileNotify.hsc
