name:           Win32-notify
version:        0.3.0.3
license:        BSD3
license-file:   LICENSE
author:         Niklas Broberg
copyright:      Niklas Broberg, 2008; Mark Dittmer, 2012
maintainer:     Pepe Iborra <pepeiborra@gmail.com>
category:       System
synopsis:       A binding to part of the Win32 library for file notification
description:    A binding to part of the Win32 library for file notification
build-type:     Simple
cabal-version:  >= 1.8
extra-source-files:  README.md

Source-repository head
    type:     git
    location: https://github.com/haskell-fswatch/win32-notify

library
  ghc-options:     -Wall -fno-warn-incomplete-patterns -fno-warn-unused-imports
  if os(windows)
    build-depends:   base >= 4.3.1.0 && < 5, Win32, directory, filepath, containers >= 0.4.0.0
    exposed-modules: System.Win32.Notify
    other-modules:   System.Win32.FileNotify
    hs-source-dirs:  src
  else
    build-depends:   base >= 4.3.1.0 && < 5
    exposed-modules: Dummy
    hs-source-dirs:  dummy-src
